perf: creation of the functional base

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
         <h2>Le site qui répértorie les commandes pour les développeurs futés !</h2>
         <nav>
-            <h3>HTML</h3>
-            <h3>CSS</h3>
-            <h3>JavaScript</h3>
-            <h3>Git</h3>
+            <h3><button class="btn-html">HTML</button></h3>
+            <h3><button class="btn-css">CSS</button></h3>
+            <h3><button class="btn-js">JavaScript</button></h3>
+            <h3><button class="btn-git">Git</button></h3>
         </nav>
     </header>
 
