--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gonblin Futé</title>
+    <title>Goblin Futé</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
@@ -19,10 +19,9 @@
     <header>
         <div class="title">
             <h1>Goblin Futé</h1>
-            <form>
-                <input type="text" id="login" placeholder="identifiant">
-                <input type="password" id="mdp" placeholder="mot de passe">
-                <button>log in</button>
+            <form name="login" action="" method="get">
+                <input type="password" id="mdp" class="mdp" placeholder="mot de passe">
+                <button class="btn-log">log in</button>
             </form>
         </div>
         <h2>Le site qui répértorie les commandes pour les développeurs futés !</h2>
