style: finalisation footer + adjustments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gonblin Futé</title>
+    <title>Goblin Futé</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
@@ -19,11 +19,6 @@
     <header>
         <div class="title">
             <h1>Goblin Futé</h1>
-            <form>
-                <input type="text" id="login" placeholder="identifiant">
-                <input type="password" id="mdp" placeholder="mot de passe">
-                <button>log in</button>
-            </form>
         </div>
         <h2>Le site qui répértorie les commandes pour les développeurs futés !</h2>
         <nav>
@@ -40,10 +35,12 @@
     </main>
 
     <footer>
-        <h4>By AlphaFox_</h4>
+        <h4><i class="fa-regular fa-hand-point-right"></i> <label for="menu-footer">By AlphaFox_</label></h4>
+        <input type="checkbox" id="menu-footer" class="invisible menu-footer">
         <ul>
-            <li>Autres sites</li>
-            <li>Me contacter</li>
+            <li><i class="fa-brands fa-facebook" style="color: #74C0FC;"></i> <a href="https://www.facebook.com/JoshRedfox">Mon Facebook</a></li>
+            <li><i class="fa-regular fa-envelope" style="color: #74C0FC;"></i> <a href="mailto:jinalphafox@gmail.com@gmail.com">Me contacter</a></li>
+            <li><i class="fa-solid fa-plus" style="color: #74C0FC;"></i> <a href="#">Autres sites</a></li>
         </ul>
     </footer>
 </body>
