feat: offline mode

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <table class="tableau">
         </table>
-        <form class="ajout">
+        <!-- form class="ajout">
             <table>
                 <tr>
                     <td class="col1"><input type="text" name="balise" placeholder="Balise/code"></td>
@@ -52,7 +52,7 @@
           <option value="CSS">
           <option value="JS">
           <option value="GIT">
-        </datalist>
+        </datalist -->
     </main>
 
     <footer>
